--- a/CSD.Web/appsettings.json
+++ b/CSD.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+  "CSDContext": "Server=localhost,1433;Database=CSD;User Id=SA;Password=certificate123;TrustServerCertificate=true;"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
